[gd_scene load_steps=5 format=3 uid="uid://ofgvabqpehxu"]

[ext_resource type="Script" uid="uid://by3rpculdpmet" path="res://scripts/user_screen.gd" id="1_nxx57"]
[ext_resource type="Texture2D" uid="uid://o3c1fps1eu28" path="res://assets/sprites/select_background.jpg" id="2_rgm07"]
[ext_resource type="FontFile" uid="uid://c0lsscgf8r2f4" path="res://assets/sprites/RevMiniPixel.ttf" id="3_jyk48"]
[ext_resource type="Theme" uid="uid://dpm7ljvkyy1lv" path="res://default_btn.tres" id="4_x32l3"]

[node name="UserScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nxx57")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_rgm07")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 363.0
offset_top = 177.0
offset_right = 1543.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jyk48")
theme_override_font_sizes/font_size = 80
text = "DIGITE O SEU NOME DE USUÁRIO:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 498.0
offset_top = 362.0
offset_right = 1431.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("3_jyk48")
theme_override_font_sizes/font_size = 30
placeholder_text = "DIGITE O SEU USUÁRIO AQUI!"
alignment = 1
max_length = 15

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 715.0
offset_top = 573.0
offset_right = 1178.0
offset_bottom = 732.0
theme = ExtResource("4_x32l3")
text = "CONFIRMAR"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 718.0
offset_top = 800.0
offset_right = 1175.0
offset_bottom = 961.0
theme = ExtResource("4_x32l3")
text = "VOLTAR"

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
